[gd_scene load_steps=39 format=3 uid="uid://tq42g3xnxngh"]

[ext_resource type="Script" path="res://scenes/game/test_level.gd" id="1_k87pl"]
[ext_resource type="PackedScene" uid="uid://cmi6j8anm0kq4" path="res://scenes/game/level_2.tscn" id="2_xceeq"]
[ext_resource type="Script" path="res://scenes/tools/recipes/recipe.gd" id="4_th73q"]
[ext_resource type="Texture2D" uid="uid://tum4qkjre8jo" path="res://assets/bg no sprite boundary.PNG" id="6_bj2sm"]
[ext_resource type="PackedScene" uid="uid://bcwuxxve07v7g" path="res://scenes/tools/goblin_nav_control.tscn" id="7_dwebm"]
[ext_resource type="PackedScene" uid="uid://d13no63s202hy" path="res://scenes/goal/goal.tscn" id="8_ok8lx"]
[ext_resource type="Script" path="res://scenes/utilities/jobs/getting.gd" id="9_dk3ht"]
[ext_resource type="Resource" uid="uid://cyvura4urvq1v" path="res://scenes/tools/recipes/ingredients/egg.tres" id="14_5k8hc"]
[ext_resource type="Script" path="res://scenes/utilities/jobs/prepping.gd" id="18_o85hd"]
[ext_resource type="PackedScene" uid="uid://f47peacw0kny" path="res://scenes/qte/CollectionTask.tscn" id="19_400p0"]
[ext_resource type="Resource" uid="uid://c7dthmhxgd8m" path="res://scenes/tools/recipes/ingredients/veggie.tres" id="20_e6d28"]
[ext_resource type="Script" path="res://scenes/utilities/jobs/cooking.gd" id="21_7f8ub"]
[ext_resource type="Resource" uid="uid://dao308cgo2ler" path="res://scenes/tools/recipes/ingredients/spices.tres" id="22_bm3hg"]
[ext_resource type="Resource" uid="uid://cnhywb24r0wdq" path="res://scenes/tools/recipes/breakfast_recipe.tres" id="23_g1a4o"]
[ext_resource type="Script" path="res://scenes/utilities/jobs/plating.gd" id="24_5ngb5"]
[ext_resource type="Script" path="res://scenes/game/camera_2d.gd" id="25_7prmo"]
[ext_resource type="PackedScene" uid="uid://teo71o0ubvgw" path="res://scenes/menu/ToDoListUI.tscn" id="26_lfx8h"]
[ext_resource type="PackedScene" uid="uid://bjv16f3io6fw3" path="res://scenes/enemy_event/bird_window.tscn" id="27_tf42o"]
[ext_resource type="Texture2D" uid="uid://dfuup846m3b8k" path="res://assets/chef_stir.png" id="28_beg7b"]
[ext_resource type="AudioStream" uid="uid://cjfe37oc1qywe" path="res://assets/Music/Gobblin Goblins Breakfast.mp3" id="34_ygabl"]
[ext_resource type="PackedScene" uid="uid://cnliugkwdvva7" path="res://scenes/qte/ChooseIngredient.tscn" id="35_311mr"]
[ext_resource type="PackedScene" uid="uid://dwn6tdlp54duv" path="res://scenes/qte/mix.tscn" id="36_j3d4y"]
[ext_resource type="Script" path="res://scenes/game/tutorial.gd" id="37_6ji0s"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_cd5tl"]
vertices = PackedVector2Array(311.898, -65.5703, 269.281, -9.72656, 281.289, -57, 311.289, -81.9531, 197.547, 37.1563, 253.773, 22.5781, 253.25, 44.9531, 141.648, 43.8984, 210.938, 167, 197.859, 167.047, 198.359, 163.852, 51.2188, 166.141, 51.3672, 167.742, 5.47656, 167.953, 7.5625, 131.852, 37.9063, 145.633, 38.0781, 131.258, 162.648, 151.508, 150.07, 105.93, 69, 106.898, 69, 66.8984, 124.68, 65.8281, 152.547, 86.1484, 158.922, -7.04688, 60, -6.03125, 60, -29, 140, -29, 157.102, -22.3906, 122.359, 38, 60, 38, 60, 18, 145.781, 18, 176.43, 134.859, 253.688, 136.883, 253.93, 165.313, 166.758, 109.492, 164.031, 28.9531, 172.844, 20.7891, 155.656, -57, 140, -81.0391)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6), PackedInt32Array(4, 6, 7), PackedInt32Array(8, 9, 10), PackedInt32Array(11, 12, 13, 14, 15), PackedInt32Array(14, 16, 15), PackedInt32Array(11, 15, 17, 10), PackedInt32Array(18, 19, 20, 21, 22), PackedInt32Array(23, 24, 25, 26, 27), PackedInt32Array(28, 29, 30, 31), PackedInt32Array(32, 33, 34, 8, 10, 17), PackedInt32Array(35, 32, 17, 18, 22), PackedInt32Array(7, 22, 21, 28), PackedInt32Array(7, 28, 31, 36), PackedInt32Array(4, 7, 36), PackedInt32Array(4, 36, 37), PackedInt32Array(27, 4, 37, 23), PackedInt32Array(38, 27, 26, 39), PackedInt32Array(38, 39, 3, 2)])
outlines = Array[PackedVector2Array]([PackedVector2Array(52, -37, 52, 123, 0, 124, -3, 176, 211, 175, 262, 173, 261, 56, 262, 13, 320, -63, 319, -90, 132, -89, 132, -37)])
agent_radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbm0o"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rym18"]
atlas = ExtResource("28_beg7b")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr7jp"]
atlas = ExtResource("28_beg7b")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_108yw"]
atlas = ExtResource("28_beg7b")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcnen"]
atlas = ExtResource("28_beg7b")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdakl"]
atlas = ExtResource("28_beg7b")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uxmy"]
atlas = ExtResource("28_beg7b")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iokh1"]
atlas = ExtResource("28_beg7b")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_30yhe"]
atlas = ExtResource("28_beg7b")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rqjk"]
atlas = ExtResource("28_beg7b")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_23y6c"]
atlas = ExtResource("28_beg7b")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpjjx"]
atlas = ExtResource("28_beg7b")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqr68"]
atlas = ExtResource("28_beg7b")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_hvx76"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rym18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr7jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_108yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcnen")
}],
"loop": true,
"name": &"stirring_fast",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdakl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uxmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iokh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30yhe")
}],
"loop": true,
"name": &"stirring_normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rqjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23y6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpjjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqr68")
}],
"loop": true,
"name": &"stirring_slower",
"speed": 3.0
}]

[node name="TestLevel" type="Node2D" node_paths=PackedStringArray("recipe_manager", "cook", "fridge", "birds")]
script = ExtResource("1_k87pl")
next_level = ExtResource("2_xceeq")
music = ExtResource("34_ygabl")
n_goblins = 3
recipe_manager = NodePath("CanvasLayer/ToDoListUI")
cook = NodePath("Jobs/Cooking")
fridge = NodePath("Jobs/Getting")
birds = NodePath("CanvasLayer/BirdWindow")
recipe_list = Array[ExtResource("4_th73q")]([ExtResource("23_g1a4o")])

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -108.0
offset_right = 320.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bj2sm")

[node name="GoblinSpawnPoint" type="Node2D" parent="."]
position = Vector2(69, 156)

[node name="NavControl" parent="." node_paths=PackedStringArray("goal_array") instance=ExtResource("7_dwebm")]
goal_array = [NodePath("../CanvasLayer/BirdWindow")]

[node name="ClickCollider" parent="NavControl/MapClickable" index="0"]
position = Vector2(160, 60.5)

[node name="Hole2Window" parent="NavControl/GoalFolder" index="0" instance=ExtResource("8_ok8lx")]
position = Vector2(210, -82)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(-4, 0)
navigation_polygon = SubResource("NavigationPolygon_cd5tl")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="NavigationRegion2D"]
vertices = PackedVector2Array(152, 143, 144, 114, 61, 115, 61, 59, 47, 58, 46, 138)
affect_navigation_mesh = true

[node name="NavigationObstacle2D2" type="NavigationObstacle2D" parent="NavigationRegion2D"]
vertices = PackedVector2Array(61, 184, 187, 185, 189, 172, 60, 174)
affect_navigation_mesh = true

[node name="NavigationObstacle2D4" type="NavigationObstacle2D" parent="NavigationRegion2D"]
vertices = PackedVector2Array(115, 46, 116, 58, 64, 59, 64, 46)
affect_navigation_mesh = true

[node name="NavigationObstacle2D5" type="NavigationObstacle2D" parent="NavigationRegion2D"]
position = Vector2(61, -116)
vertices = PackedVector2Array(99, 199, 113, 222, 121, 243, 197, 245, 197, 169, 91, 168)
affect_navigation_mesh = true

[node name="NavigationObstacle2D6" type="NavigationObstacle2D" parent="NavigationRegion2D"]
position = Vector2(120, -224)
vertices = PackedVector2Array(-62, 234, 28, 234, 43, 243, 34, 225, -63, 226)
affect_navigation_mesh = true

[node name="NavigationObstacle2D7" type="NavigationObstacle2D" parent="NavigationRegion2D"]
position = Vector2(120, -224)
vertices = PackedVector2Array(78, 239, 135, 239, 151, 175, 44, 175, 45, 199)
affect_navigation_mesh = true

[node name="Jobs" type="Node2D" parent="."]

[node name="Getting" type="Area2D" parent="Jobs"]
position = Vector2(88, -24)
script = ExtResource("9_dk3ht")
choosing_task = ExtResource("35_311mr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jobs/Getting"]
shape = SubResource("RectangleShape2D_rbm0o")

[node name="Prepping" type="Area2D" parent="Jobs"]
position = Vector2(210, 34)
script = ExtResource("18_o85hd")
collectTask = ExtResource("19_400p0")
time = 3
items_needed = [ExtResource("14_5k8hc"), ExtResource("20_e6d28")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jobs/Prepping"]
shape = SubResource("RectangleShape2D_rbm0o")

[node name="Cooking" type="Area2D" parent="Jobs"]
position = Vector2(205, 170)
script = ExtResource("21_7f8ub")
collectTask = ExtResource("19_400p0")
mixTasx = ExtResource("36_j3d4y")
items_needed = [ExtResource("14_5k8hc"), ExtResource("20_e6d28"), ExtResource("22_bm3hg")]
item_reward = ExtResource("23_g1a4o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jobs/Cooking"]
shape = SubResource("RectangleShape2D_rbm0o")

[node name="Plating" type="Area2D" parent="Jobs"]
position = Vector2(96, 80)
script = ExtResource("24_5ngb5")
time = 1
items_needed = Array[ExtResource("4_th73q")]([ExtResource("23_g1a4o")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jobs/Plating"]
shape = SubResource("RectangleShape2D_rbm0o")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 88)
limit_smoothed = true
script = ExtResource("25_7prmo")
move_speed = 2

[node name="TopLeft" type="Node2D" parent="Camera2D"]
position = Vector2(-160, -90)

[node name="BottomRight" type="Node2D" parent="Camera2D"]
position = Vector2(160, 182)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ToDoListUI" parent="CanvasLayer" instance=ExtResource("26_lfx8h")]
metadata/_edit_lock_ = true

[node name="ProgressBar" parent="CanvasLayer/ToDoListUI/Progress Bars" index="0"]
offset_top = 18.0
offset_bottom = 30.0

[node name="ProgressBar2" parent="CanvasLayer/ToDoListUI/Progress Bars" index="1"]
offset_top = 42.0
offset_bottom = 54.0

[node name="ProgressBar4" parent="CanvasLayer/ToDoListUI/Progress Bars" index="2"]
offset_top = 66.0
offset_bottom = 78.0

[node name="BG" parent="CanvasLayer/ToDoListUI/GoblinCounter" index="0"]
mouse_filter = 2

[node name="BG2" parent="CanvasLayer/ToDoListUI/GoblinCounter" index="1"]
mouse_filter = 2

[node name="Num" parent="CanvasLayer/ToDoListUI/GoblinCounter" index="2"]
mouse_filter = 2

[node name="Border1" parent="CanvasLayer/ToDoListUI/GoblinCounter" index="3"]
mouse_filter = 2

[node name="Border2" parent="CanvasLayer/ToDoListUI/GoblinCounter" index="4"]
mouse_filter = 2

[node name="BG4" parent="CanvasLayer/ToDoListUI/Window" index="0"]
mouse_filter = 2

[node name="BG3" parent="CanvasLayer/ToDoListUI/Window" index="1"]
mouse_filter = 2

[node name="ScrollContainer" parent="CanvasLayer/ToDoListUI/Recipe" index="0"]
mouse_filter = 2

[node name="BirdWindow" parent="CanvasLayer" node_paths=PackedStringArray("garrison_point") instance=ExtResource("27_tf42o")]
position = Vector2(290, 57)
scale = Vector2(0.3, 0.3)
priority = 1
min_time = 30
max_time = 40
garrison_point = NodePath("../../NavControl/GoalFolder/Hole2Window")

[node name="Chef" type="AnimatedSprite2D" parent="."]
position = Vector2(215, 126)
sprite_frames = SubResource("SpriteFrames_hvx76")
animation = &"stirring_normal"
autoplay = "stirring_normal"
frame_progress = 0.369441

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="tutorial" type="Node" parent="."]
script = ExtResource("37_6ji0s")

[connection signal="plating_complete" from="Jobs/Plating" to="." method="_on_plating_plating_complete"]

[editable path="NavControl"]
[editable path="CanvasLayer/ToDoListUI"]
